force-app/main/default/objects/Project__c/fields/Remaining_PO_Budget__c.field-meta.xml
<CustomField>
    <fullName>Remaining_PO_Budget__c</fullName>
    <formula>Total_PO_Budget__c -  Total_Actual_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total PO Budget less the Total Actual Billable</inlineHelpText>
    <label>Remaining Approved PO Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>