force-app/main/default/objects/Project__c/fields/Reports_Folder__c.field-meta.xml
<CustomField>
    <fullName>Reports_Folder__c</fullName>
    <label>Reports Folder</label>
    <type>Url</type>
</CustomField>