force-app/main/default/objects/Project__c/fields/Reports_URL_del__c.field-meta.xml
<CustomField>
    <fullName>Reports_URL_del__c</fullName>
    <inlineHelpText>URL to Reports Folder</inlineHelpText>
    <label>Reports URL</label>
    <type>Url</type>
</CustomField>