force-app/main/default/objects/Project__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <inlineHelpText>Is project delivery adequately resourced?</inlineHelpText>
    <label>Resource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RAG</valueSetName>
    </valueSet>
</CustomField>