force-app/main/default/objects/Project__c/fields/Resource_Flag__c.field-meta.xml
<CustomField>
    <fullName>Resource_Flag__c</fullName>
    <formula>IMAGE( 
CASE( Resource__c, 
&quot;OnTrack&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Caution&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Impact&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Resource Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Flag</label>
    <type>Text</type>
</CustomField>