force-app/main/default/objects/Project__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <formula>CASE(Resource__c , &apos;Impact&apos;, 2, &apos;Caution&apos;, 1, 0) 
+ CASE(Customer_Sentiment__c , &apos;Impact&apos;, 2, &apos;Caution&apos;, 1, 0) 
+ CASE(Scope__c , &apos;Impact&apos;, 2, &apos;Caution&apos;, 1, 0)
+ CASE(Schedule__c , &apos;Impact&apos;, 2, &apos;Caution&apos;, 1, 0) 
+ CASE(Budget__c , &apos;Impact&apos;, 2, &apos;Caution&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>