force-app/main/default/objects/Project__c/fields/Salesforce_Signed__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Signed</label>
    <type>Checkbox</type>
</CustomField>