force-app/main/default/objects/Project__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <inlineHelpText>Are we delivering according to agreed schedule?</inlineHelpText>
    <label>Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RAG</valueSetName>
    </valueSet>
</CustomField>