force-app/main/default/objects/Project__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <inlineHelpText>Is the project scope aligned with expectations?</inlineHelpText>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RAG</valueSetName>
    </valueSet>
</CustomField>