force-app/main/default/objects/Project__c/fields/Show_Financials__c.field-meta.xml
<CustomField>
    <fullName>Show_Financials__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if you want to hide the financials from the Weekly Status Report</inlineHelpText>
    <label>Show Financials</label>
    <type>Checkbox</type>
</CustomField>