force-app/main/default/objects/Project__c/fields/Show_in_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Tracker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to tell Revenue Tracker if it needs to be displayed (only matters for projects owned by R3)</description>
    <inlineHelpText>Only matters for projects owned by the account &quot;R3 Digital&quot;</inlineHelpText>
    <label>Show in Tracker</label>
    <type>Checkbox</type>
</CustomField>