force-app/main/default/objects/Project__c/fields/Show_Project_in_Portal__c.field-meta.xml
<CustomField>
    <fullName>Show_Project_in_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this project will show in the customer portal</description>
    <label>Show Project in Portal</label>
    <type>Checkbox</type>
</CustomField>