force-app/main/default/objects/Project__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Projects_R3</relationshipName>
    <type>Lookup</type>
</CustomField>