force-app/main/default/objects/Project__c/fields/Stage_Date_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_Backlog__c</fullName>
    <label>Stage Date - Backlog</label>
    <type>Date</type>
</CustomField>