force-app/main/default/objects/Project__c/fields/Stage_Date_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_Cancelled__c</fullName>
    <label>Stage Date - Cancelled</label>
    <type>Date</type>
</CustomField>