force-app/main/default/objects/Project__c/fields/Stage_Date_Complete__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_Complete__c</fullName>
    <label>Stage Date - Complete</label>
    <type>Date</type>
</CustomField>