force-app/main/default/objects/Project__c/fields/Stage_Date_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_Discovery__c</fullName>
    <label>Stage Date - Discovery</label>
    <type>Date</type>
</CustomField>