force-app/main/default/objects/Project__c/fields/Stage_Date_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_Estimate__c</fullName>
    <label>Stage Date - Estimate</label>
    <type>Date</type>
</CustomField>