force-app/main/default/objects/Project__c/fields/Stage_Date_Hypercare__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_Hypercare__c</fullName>
    <label>Stage Date - Hypercare</label>
    <type>Date</type>
</CustomField>