force-app/main/default/objects/Project__c/fields/Stage_Date_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_In_Progress__c</fullName>
    <label>Stage Date - In Progress</label>
    <type>Date</type>
</CustomField>