force-app/main/default/objects/Project__c/fields/Stage_Date_Kick_Off__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_Kick_Off__c</fullName>
    <label>Stage Date - Kick Off</label>
    <type>Date</type>
</CustomField>