force-app/main/default/objects/Project__c/fields/Stage_Date_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_On_Hold__c</fullName>
    <label>Stage Date - On Hold</label>
    <type>Date</type>
</CustomField>