force-app/main/default/objects/Project__c/fields/Stage_Date_Planning__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_Planning__c</fullName>
    <label>Stage Date - Planning</label>
    <type>Date</type>
</CustomField>