force-app/main/default/objects/Project__c/fields/Stage_Date_Support__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_Support__c</fullName>
    <label>Stage Date - Support</label>
    <type>Date</type>
</CustomField>