force-app/main/default/objects/Project__c/fields/Stage_Date_UAT__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_UAT__c</fullName>
    <label>Stage Date - UAT</label>
    <type>Date</type>
</CustomField>