force-app/main/default/objects/Project__c/fields/Template_Project__c.field-meta.xml
<CustomField>
    <fullName>Template_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the original project template this template was created from</inlineHelpText>
    <label>Template Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Projects_R3</relationshipName>
    <type>Lookup</type>
</CustomField>