force-app/main/default/objects/Project__c/fields/Testing__c.field-meta.xml
<CustomField>
    <fullName>Testing__c</fullName>
    <defaultValue>0.15</defaultValue>
    <label>Testing %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>