force-app/main/default/objects/Project__c/fields/Testing_Est__c.field-meta.xml
<CustomField>
    <fullName>Testing_Est__c</fullName>
    <description>Estimated hours required for testing</description>
    <formula>Total_Feature_Est__c * Testing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Testing Est</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>