force-app/main/default/objects/Project__c/fields/Time_Logged__c.field-meta.xml
<CustomField>
    <fullName>Time_Logged__c</fullName>
    <description>All the time entries logged in Toggl against this project</description>
    <label>Time Logged</label>
    <summarizedField>Time_Entry__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Time_Entry__c.Is_Billable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Entry__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>