force-app/main/default/objects/Project__c/fields/Time_Logged_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Time_Logged_Last_Month__c</fullName>
    <label>Time Logged Last Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>