force-app/main/default/objects/Project__c/fields/Toggl_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Toggl_Client_ID__c</fullName>
    <formula>Account__r.Toggl_ID__c</formula>
    <label>Toggl Client ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>