force-app/main/default/objects/Project__c/fields/Total_Actual_Billable__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Billable__c</fullName>
    <inlineHelpText>This field is kept up to date automatically by the Toggl integration</inlineHelpText>
    <label>Total Actual Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>