force-app/main/default/objects/Project__c/fields/Total_Actual_Billable_Time_hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Billable_Time_hrs__c</fullName>
    <inlineHelpText>This is updated automatically by the Toggl integration</inlineHelpText>
    <label>Total Actual Billable Time (hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>