force-app/main/default/objects/Project__c/fields/Total_Budget_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Estimate__c</fullName>
    <formula>Project_Budget_Est_Time__c *  Proposal_Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the total estimate for budget tracking - it includes actual billable time on completed work items and estimated time on incomplete work items. It does not include unapproved work items.</inlineHelpText>
    <label>Total Expected Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>