force-app/main/default/objects/Project__c/fields/Total_Effort__c.field-meta.xml
<CustomField>
    <fullName>Total_Effort__c</fullName>
    <inlineHelpText>Total effort estimate (hours, from work items)</inlineHelpText>
    <label>Total Effort (hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>