force-app/main/default/objects/Project__c/fields/Total_Effort_days__c.field-meta.xml
<CustomField>
    <fullName>Total_Effort_days__c</fullName>
    <formula>Total_Effort__c / 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Effort (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>