force-app/main/default/objects/Project__c/fields/Total_Est_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Est_Cost__c</fullName>
    <formula>Total_Estimate__c * Proposal_Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This value is the total of all work item estimates on the project - including any unapproved work items. Excluding Work Items marked as Optional</inlineHelpText>
    <label>Total Est Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>