force-app/main/default/objects/Project__c/fields/Total_Est_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Est_Days__c</fullName>
    <formula>Total_Estimate__c / 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Est (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>