force-app/main/default/objects/Project__c/fields/Total_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimate__c</fullName>
    <formula>Total_Feature_Est__c + IF(Is_PreSales__c, Project_Management_Est__c + Discovery_Est__c + Design_Analysis_Est__c + Testing_Est__c + UAT_Est__c + Training_Documentation_Est__c + Hypercare_Est__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Est</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>