force-app/main/default/objects/Project__c/fields/Total_Feature_Est__c.field-meta.xml
<CustomField>
    <fullName>Total_Feature_Est__c</fullName>
    <label>Total Feature Est</label>
    <summarizedField>Project_Feature__c.Total_Est__c</summarizedField>
    <summaryForeignKey>Project_Feature__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>