force-app/main/default/objects/Project__c/fields/Total_PO_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_Budget__c</fullName>
    <inlineHelpText>Total of Approved or Available Purchase Orders against the project</inlineHelpText>
    <label>Total PO Budget</label>
    <summarizedField>Purchase_Order__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Purchase_Order__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved, Available</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchase_Order__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>