force-app/main/default/objects/Project__c/fields/Total_RAID_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_RAID_Items__c</fullName>
    <label>Total RAID Items</label>
    <summaryForeignKey>RAID_Log__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>