force-app/main/default/objects/Project__c/fields/Training_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Training_Documentation__c</fullName>
    <defaultValue>0.1</defaultValue>
    <description>The percentage of time to set aside for training and documentation.</description>
    <label>Training &amp; Documentation %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>