force-app/main/default/objects/Project__c/fields/Training_Documentation_Est__c.field-meta.xml
<CustomField>
    <fullName>Training_Documentation_Est__c</fullName>
    <description>Estimated hours required for training &amp; documentation</description>
    <formula>Total_Feature_Est__c * Training_Documentation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training &amp; Documentation Est</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>