force-app/main/default/objects/Project__c/fields/UAT__c.field-meta.xml
<CustomField>
    <fullName>UAT__c</fullName>
    <defaultValue>0.15</defaultValue>
    <label>UAT %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>