force-app/main/default/objects/Project__c/fields/UAT_Est__c.field-meta.xml
<CustomField>
    <fullName>UAT_Est__c</fullName>
    <description>Estimated hours required for user acceptance testing</description>
    <formula>Total_Feature_Est__c * UAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the Total UAT Time estimated for each Project Feature during the Project Design Phase.</inlineHelpText>
    <label>UAT Est</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>