force-app/main/default/objects/Project__c/fields/Weighted_Est__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Est__c</fullName>
    <formula>Opportunity__r.Probability *  Total_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Est</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>