force-app/main/default/objects/Project__c/fields/Work_Item_Budget_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Budget_Deviation__c</fullName>
    <formula>(((Time_Logged__c +  Work_Item_Incomplete_Total__c) *  Proposal_Hourly_Rate__c ) -  Total_PO_Budget__c  )
/  Total_PO_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Item Budget Deviation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>