force-app/main/default/objects/Project__c/fields/Work_Item_Incomplete_Total__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Incomplete_Total__c</fullName>
    <label>Work Item Incomplete Total</label>
    <summarizedField>Project_Feature__c.Work_Item_Incomplete_Total__c</summarizedField>
    <summaryForeignKey>Project_Feature__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>