force-app/main/default/objects/Project__c/validationRules/Must_Have_Default_Product_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_Default_Product_Owner</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Default_Product_Owner__c) &amp;&amp; !Is_PreSales__c</errorConditionFormula>
    <errorMessage>Project must have a Default Product Owner</errorMessage>
</ValidationRule>