force-app/main/default/objects/Project__c/validationRules/Must_have_Project_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_Project_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK(Start_Date__c), 
  ISBLANK(End_Date__c),  
  NOT(
   OR(
     ISPICKVAL(Status__c, &apos;Backlog&apos;), 
     ISPICKVAL(Status__c,&apos;Estimate&apos;), 
     ISPICKVAL(Status__c,&apos;Cancelled&apos;), 
     ISPICKVAL(Status__c,&apos;Complete&apos;)
   )
  )
)</errorConditionFormula>
    <errorMessage>You must enter project dates to move the project stage from Backlog or Estimate</errorMessage>
</ValidationRule>