force-app/main/default/objects/Project__c/listViews/Active_Projects_RAID_Review.listView-meta.xml
<ListView>
    <fullName>Active_Projects_RAID_Review</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Lead_Consultant__c</columns>
    <columns>Status__c</columns>
    <columns>Total_RAID_Items__c</columns>
    <columns>Open_RAID_Items__c</columns>
    <columns>Open_Risks__c</columns>
    <columns>Open_Actions__c</columns>
    <columns>Open_Issues__c</columns>
    <columns>Open_Decisions__c</columns>
    <columns>Closed_RAID_Items__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
        <value>R3 Digital</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Discovery,On Hold,In Progress,UAT,Hyper care</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
        <value>Gazela</value>
    </filters>
    <label>Active Projects - RAID Review</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>