force-app/main/default/objects/Project__c/listViews/Active_Projects_review.listView-meta.xml
<ListView>
    <fullName>Active_Projects_review</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Lead_Consultant__c</columns>
    <columns>Project_Update__c</columns>
    <columns>Total_Est_Cost__c</columns>
    <columns>Total_PO_Budget__c</columns>
    <columns>Total_Budget_Estimate__c</columns>
    <columns>Total_Actual_Billable__c</columns>
    <columns>Billable_Hours_Last_Week__c</columns>
    <columns>Work_Item_Budget_Deviation__c</columns>
    <columns>Status__c</columns>
    <columns>Risk__c</columns>
    <columns>Remaining_Available_PO_Budget__c</columns>
    <columns>R3_SPOC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
        <value>R3 Digital</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Discovery,On Hold,In Progress,UAT,Hyper care,Support</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
        <value>Gazela</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>- Client Workstream</value>
    </filters>
    <label>Active Projects - review</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>