force-app/main/default/objects/Project__c/listViews/Active_Support_Clients.listView-meta.xml
<ListView>
    <fullName>Active_Support_Clients</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Lead_Consultant__c</columns>
    <columns>IC__c</columns>
    <columns>R3_SPOC__c</columns>
    <columns>Support_Type__c</columns>
    <columns>Project_Update__c</columns>
    <columns>Billable_Hours_Last_Week__c</columns>
    <columns>Total_PO_Budget__c</columns>
    <columns>Total_Actual_Billable__c</columns>
    <columns>Status__c</columns>
    <columns>Risk__c</columns>
    <columns>Project_Report_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
        <value>R3 Digital</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
        <value>Gazela</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Support</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>Support_Type__c</field>
        <operation>equals</operation>
        <value>MSA</value>
    </filters>
    <label>Active Support Clients</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>