force-app/main/default/objects/Project__c/listViews/All_Projects_excl_R3.listView-meta.xml
<ListView>
    <fullName>All_Projects_excl_R3</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Total_Estimate__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
        <value>R3 Digital</value>
    </filters>
    <label>All Projects (excl. R3)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>