force-app/main/default/objects/Project__c/listViews/Andy_s_Projects1.listView-meta.xml
<ListView>
    <fullName>Andy_s_Projects1</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Lead_Consultant__c</columns>
    <columns>R3_SPOC__c</columns>
    <columns>IC__c</columns>
    <columns>Billable_Hours_Last_Week__c</columns>
    <columns>Total_PO_Budget__c</columns>
    <columns>Total_Actual_Billable__c</columns>
    <columns>Project_Update__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>R3_SPOC__c</field>
        <operation>equals</operation>
        <value>Andy Tompson</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Backlog,Support,Cancelled,Complete</value>
    </filters>
    <label>Andy&apos;s Projects</label>
    <sharedTo>
        <group>Project_Management_Team</group>
    </sharedTo>
</ListView>